# open-bus-stop

./: .gitignore  README.md
CAD/: Front (Meshed).stl  OpenBusStop.FCStd  open-bus-stop.step
CAD/prototype/: Back (Meshed).stl  InformalBusDisplay.20260612-200830.FCBak  InformalBusDisplay.FCStd
bus-stop-display/: Cargo.toml  build.rs
bus-stop-display/src/: main.rs
display-utils/src/: special_service_entry.rs
open-bus-stop-pcb/: .step  _autosave-open-bus-stop.kicad_sch  open-bus-stop.kicad_pcb  open-bus-stop.kicad_prl  open-bus-stop.kicad_pro  open-bus-stop.kicad_sch
open-bus-stop-pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
planning/: bom.csv  planning.md
prototype/bus-stop-display/: build.rs
prototype/bus-stop-display/.cargo/: config.toml
prototype/bus-stop-display/src/: lib.rs  main.rs
prototype/display-utils/: Cargo.toml
prototype/display-utils/src/: lib.rs  stop_time_entry.rs
prototype/transit_feed_parser/: README.md  main.py  pyproject.toml
transit_feed_parser/: main.py
